<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/compass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/outerCircle"
            android:layout_width="400dp"
            android:layout_height="400dp"
            app:srcCompat="@drawable/circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/triangle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:scaleX="0.5"
            app:srcCompat="@drawable/triangle"
            app:layout_constraintTop_toTopOf="@id/outerCircle"
            app:layout_constraintStart_toStartOf="@id/outerCircle"
            app:layout_constraintEnd_toEndOf="@id/outerCircle"
            app:layout_constraintBottom_toBottomOf="@id/outerCircle" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginBottom="100dp">

        <Button
            android:id="@+id/zoom_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="+"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_gravity="start|center_vertical"
            android:gravity="center" />

        <Button
            android:id="@+id/zoom_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_gravity="end|center_vertical"
            android:gravity="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/addLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="Add Friend"
        android:onClick="addFriend" />
    <TextView
        android:id="@+id/GreenDot"
        android:layout_width="71dp"
        android:layout_height="98dp"
        android:text="\u2022"
        android:textColor="#008000"
        android:textSize="80sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/RecDot"
        android:layout_width="69dp"
        android:layout_height="86dp"
        android:text="\u2022"
        android:textColor="#FF0000"
        android:textSize="80sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="118dp"
        android:layout_height="40dp"
        android:text=" "
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:visibility="visible" />

</FrameLayout>
